--- a/assets/styles/profile_view.scss
+++ b/assets/styles/profile_view.scss
@@ -91,6 +91,7 @@
     height: 19em;
     flex-shrink: 0;
     border-radius: 10px;
+    object-fit: cover;
   }
 
   .left-panel {
